Change my profile picture

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="15">
     <tr>
-      <td><img src="images/passport size picture lkp.jpg" height="210px" width="210px" alt="lionel king profile picture"></td>
+      <td><img src="images/PASSPORT SIZE PICTURE LKP.jpg" height="210px" width="210px" alt="lionel king profile picture"></td>
       <td>
         <h1>Lionel King Palafox</h1>
         <p><em>Aspiring <strong>Web Developer.</strong></em></p>
